# storybook

./: .dockerignore  .env.example  .example.env  .gitignore  Dockerfile  Dokerfile  README.md  __init__.py  agent.py  agent_tool_report.json  agent_tool_report_src.json  agent_tools_comparison_report.txt  agents.py  amz.sh  app.py  backend.py  cloudbuild.yaml  config.py  config.sh  db_utils.py  deploy-working.sh  deploy.sh  deployment.md  docker-compose.yaml  docker-compose.yml  env.example  example.config.json  example.env  fix_escapes.py  fixxer.py  graph.py  graph_agent_report_src.json  langgraph.dev  langgraph.json  langgraph.jsonu  main.py  metrics.py  models.py  mongodb.py  output.txt  (+17 more)
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
agents/: base_agent.py  creation.py  development.py  factory.py  initialization.py  quality_assessment.py
agents/character_development/: __init__.py
agents/editing/: init.py
agents/project_management/: __init__.py
agents/publication/: init.py
agents/reader_experience/: init.py
agents/research/: __init__.py
agents/story_architecture/: __init__.py
agents/writing/: init.py
bak/: Dockerfile  README.md  langgraph.json  listrepo.sh  prompts.py  pyproject.toml
bak/src/storybook/: config.py  graph.py  prompts.py  state.py  tools.py  utils.py
bak/src/storybook/agents/: __init__.py  author_relations.py  base_agent.py  editor.py  human_in_loop.py  importation_agent.py  joint_writer.py  publisher.py  publishing_supervisor.py  research_supervisor.py  researcher.py  style_guide_editor.py  tools.py  writer.py  writing_supervisor.py
bak/src/storybook/entrypoints/: main.py
bak/src/storybook/services/: database.py  notifcation_service.py  ollama_service.py  replicate_service.py  search_service.py  storage_service.py  vector_store.py
bak/src/storybook/utils/: analysis_utils.py  text_utils.py
bak/src/storybook/workflows/: story_creation.py
bedrock/: noveflow_dynamo.py  novelflow_config.py  novelflow_flows.py  novelflow_iam.py  novelflow_manuscript.py  novelflow_research.py
config/: access-policy-template.json  agent-definitions.json  collaborations.json  editor-policy-template.json  kb-config-template.json  models_config.py  prompt-list.txt  system_config.py  test_manuscript.json  trust-policy.json
docs/examples/: llm_config_example.py
graphs/: graph.py  main.py
graphs/subgraphs/: character_development.py  drafting.py  initialization.py  publication.py  reader_optimization.py  research.py  revision.py
innovations/creativity/: emergence.py
innovations/voice/: adaptive_voice.py
lambda/: research_function.py  workflow_function.py
models/: cache_manager.py  character.py  chat__history.py  continuity.py  document_loader.py  graph_store.py  market.py  parent_document_retriever.py  quality_assessment.py  record_manager.py  vector_search.py  world_building.py
oldsrc/: Makefile  README.md  config.py  docfetcher.py  pyproject.toml
oldsrc/agents/: base_agent.py  importation_agent.py
oldsrc/agents/publishing/: conflict_resolution_agent.py  continuity_checker_agent.py  publishing_team_agent.py  thematic_anakysis_agent.py
oldsrc/agents/research/: consumer_insights_agent.py  document_retriever_agent.py  market_researcher.py  web_crawler_agent.py
oldsrc/agents/writing/: character_builder_agent.py  dialogue_writer_agent.py  world_builder_agent.py
oldsrc/config/: agent_parameters.json  llm_config.py  settings.toml
oldsrc/docs/: #__codelineno-1-23.txt  #langgraph_sdk.client.RunsClient.create.txt
oldsrc/prev/: .dockerignore  .env.example  .gitignore  LICENSE  README.md  langgraph.json  prompts.md
oldsrc/prev/.langgraph_api/: .langgraph_ops.pckl
oldsrc/prev/agents/: author_relations_agent.py
oldsrc/prev/agents/publishing/: consistency_checker_agent.py  editor_agent.py  finilisation_agent.py  narrative_structure_agent.py  nlp_processors.py
oldsrc/prev/agents/research/: character_research_agent.py  contextual_researcher.py
oldsrc/prev/agents/writing/: story_writer_agent.py  writing_team_supervisor.py
oldsrc/prev/graph/: workflow_graph.py
oldsrc/prev/services/: mongodb_service.py
oldsrc/prev/src/storybook/: config.py  tools.py
oldsrc/prev/src/storybook/agents/publishing/: conflict_resolution_agent.py
oldsrc/prev/src/storybook/agents/research/: consumer_insights_agent.py
oldsrc/prev/src/storybook/supervisors/: overall_supervisor.py
oldsrc/prev/tests/unit_tests/: test_configuration.py
oldsrc/services/: tools_service.py
oldsrc/src/storybook/: __init__.py  graph.py  prompts.py  state.py
oldsrc/src/storybook/agents/publishing/: consistency_checker_agent.py  editor_agent.py  narrative_structure_agent.py  thematic_analysis_agent.py
oldsrc/src/storybook/agents/research/: market_research_agent.py
oldsrc/src/storybook/agents/writing/: character_development_agent.py  content_generation_agent.py  world_building_agent.py
oldsrc/src/storybook/supervisors/: team_supervisor.py
oldsrc/tests/integration_tests/: test_graph.py
prompts/: content_expert.md  copy_editor.md  executive_director.md  feedback_coordinator.md  story_editor.md  structure_editor.md
scripts/: download_models.py  fix_escapes.py  setup_build.py  setup_dirs.py
src/: config.py  graph.py  utils.py
src/storybook/: __init__.py  agents.py  app.py  config.py  main.py  (+9 more)
states/: project_state.py
static/: index.html
storybook/: agent.py  api.py  chains.py  cli.py  config.py  config_manager.py  graph.py  main.py  messages.py  nlp.py  plot_graph.py  state.py  tools.py
tests/: conftest.py  test_agent_factory.py  test_base_agent.py  test_creation.py  test_development.py  test_finalization.py  test_graph.py  test_integration.py  test_phase_agents.py  test_project_management.py  test_quality_assessment.py  test_refinement.py  test_tools.py
tools/: creation.py  development.py  finalization.py  project_management.py  quality_assessment.py  refinement.py
utils/: __init__.py  communication.py  vector_search.py
v1/: app.bak  app.old
workflows/: master_workflow.py
(+395 files in other folders)
