[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "storybook"
version = "0.1.0"
description = "A LangGraph-powered workflow for transforming draft manuscripts into finished novels"
readme = "README.md"
requires-python = ">3.11"
authors = [
    {name = "David James Lennon, david@fortunestold.co"}
]
dependencies = [
    "langchain>=0.3.0,<0.4.0",
    "langchain-community>=0.3.0,<0.4.0",
    "langchain-core>=0.3.0,<0.4.0",
    "langchain-openai>=0.2.0,<0.3.0",
    "langchain-mongodb>=0.2.0,<0.3.0", 
    "langgraph>=0.2.20,<0.3.0",
    "langserve>=0.3.0,<0.4.0",
    "pymongo>=4.3.0",
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "replicate>=0.20.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0"
]

[tool.setuptools]
packages = ["storybook"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"