[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "storybook"
version = "0.1.0"
description = "A LangGraph-powered workflow for transforming draft manuscripts into finished novels"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "David James Lennon", email = "david@fortunestold.co"}
]
dependencies = [
    "langchain>=0.3.0,<0.4.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.10",
    "langgraph>=0.0.10",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pymongo>=4.6.1",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "replicate>=0.22.0",
    "tavily-python>=0.2.8"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.1",
    "ruff>=0.0.291"
]

[tool.setuptools]
packages = ["storybook"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py312"
