[build-system]
requires = ["setuptools>=75.8.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "storybook"
version = "0.1.0"
description = "A LangGraph-powered workflow for transforming draft manuscripts into finished novels"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "David James Lennon", email = "david@fortunestold.co"}
]
dependencies = [
    "fastapi==0.115.9",
    "langchain==0.3.19",
    "langchain-community==0.3.18",
    "langchain-core==0.3.40",
    "langchain-mongodb==0.5.0",
    "langchain-openai==0.3.7",
    "langchain-text-splitters==0.3.6",
    "langgraph==0.3.1",
    "langserve==0.3.1",
    "pydantic==2.10.6",
    "pymongo==4.11.1",
    "python-dotenv>=1.0.0",
    "uvicorn==0.34.0"
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.1",
    "ruff>=0.0.291"
]

[tool.setuptools]
packages = ["storybook"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py312"
