[project]
name = "storybook"
version = "0.1.0"
description = "Multi-agent system for collaborative story creation with research, writing, and publishing teams"
requires-python = ">=3.10"
readme = "README.md"
authors = [
    {name = "David James Lennon, Adventures of the Persistently Impaired (and Other Tales) Limited"}
]
dependencies = [
    "langchain>=0.3.7",
    "langchain-openai>=0.3.7",
    "langchain-google_community",
    "langchain_mongodb",
    "langchain-community>=0.3.18",
    "langchain-core",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "pymongo>=4.11.1",
    "boto3>=1.37.0",
    "nltk>=3.9.1",
    "regex>=2024.11.6",
    "requests>=2.32.3",
    "openai>=1.64.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
