[tool.poetry]
name = "storybook"
version = "0.1.0"
description = "A hierarchical multi-agent system for novel writing using LangGraph and LangChain"
authors = ["fortunestoldco"]
packages = [
    { include = "agents", from = "." },
    { include = "config", from = "." },
    { include = "services", from = "." },
    { include = "graph", from = "." }
]

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.19"
langgraph = "^0.2.74"
pymongo = "^4.11.1"
python-dotenv = "^1.0.1"
openai = "^1.64.0"
langchain-community = "^0.3.18"
langchain-experimental = "^0.3.4"
langchain-anthropic = "^0.3.8"
langchain-openai = "^0.3.7"
chromadb = "^0.6.3"
pydantic = "^2.10.6"
beautifulsoup4 = "^4.13.3"
requests = "^2.32.3"
fastapi = "^0.115.8"
uvicorn = "0.34.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
storybook = "graph.workflow_graph:NovelWritingGraph"

[tool.poetry.urls]
"Homepage" = "https://github.com/fortunestoldco/storybook"
"Repository" = "https://github.com/fortunestoldco/storybook.git"
