[tool.poetry]
name = "storybook"
version = "0.1.0"
description = "A hierarchical multi-agent system for novel writing using LangGraph and LangChain"
authors = ["fortunestoldco"]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.0"
langgraph = "^0.0.10"
pymongo = "^4.6.1"
python-dotenv = "^1.0.0"
openai = "^1.12.0"
chromadb = "^0.4.22"
pydantic = "^2.6.1"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"